# python-example-droid-dataset

./: .gitignore  .mypy.ini  Dockerfile  README.md  attach.sh  build.sh  install.sh  requirements.txt  rerun_loader_urdf.py  run.sh  shell.nix  shutdown.sh  start.sh  visualize.py
Panda/: panda.urdf
franka_description/: README.md  panda.urdf
franka_description/robots/common/: franka_robot.xacro
franka_description/robots/panda/: panda.urdf.xacro
robotiq_arg85_description/: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml  urdf.rviz
robotiq_arg85_description/launch/: display.launch
robotiq_arg85_description/robots/: robotiq_arg85_description.urdf  robotiq_arg85_description.urdf.xacro
scripts/: download_raw.py
src/: common.py  raw.py  rerun_loader_urdf.py  rlds.py  visualize.py
